Swagger and README modification
